--- a/karl/views/static/ux2/css/responsive/768.less
+++ b/karl/views/static/ux2/css/responsive/768.less
@@ -228,4 +228,56 @@
             font-size: 1em;
         }
     }
+    #main {
+        #left {
+            .col(3);
+        }
+        #center {
+            .col(6);
+        }  
+        #right {
+            .col(3);
+        }
+    }
+    #footer {
+        .container {
+            .extra {
+                width: auto;
+                margin: 0 20px 0;
+            }
+            #offices-wrapper {
+                width: auto;
+                margin: 0 0 0 20px;
+                #offices-listing {
+                    margin: 0;
+                    padding:0;
+                    list-style: none;
+                    li {
+                        margin: 0;
+                        padding: 0;
+                        list-style:none;
+                        display: inline;
+                        white-space: normal;
+                        border-bottom: none;
+                        margin-bottom: none;
+                        padding-bottom: none;
+                        &:after {
+                            content: ' - ';
+                            display: block;
+                            margin: 0 0.5em;
+                        }
+                    }
+                    li:first-child {
+                        border-top: none;
+                    }
+                    li:last-child {
+                        &:after {
+                            content: '';
+                            margin: 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
