--- a/karl/views/static/ux2/css/responsive/320.less
+++ b/karl/views/static/ux2/css/responsive/320.less
@@ -69,6 +69,9 @@
     }
     #footer {
         .container {
+            .osi-logo {
+                padding: 0;
+            }
             .extra {
                 .horList(right);
                 clear: none;
