--- a/karl/views/static/ux2/css/responsive/768.less
+++ b/karl/views/static/ux2/css/responsive/768.less
@@ -241,6 +241,9 @@
     }
     #footer {
         .container {
+            .osi-logo {
+                padding: 1em 0;
+            }
             .extra {
                 width: auto;
                 margin: 0 20px 0;
