--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -692,6 +692,7 @@
     .cal_month th {
       font-weight: normal;
       font-size: 90%;
+      border-bottom: 1px solid #cccccc;
     }
     .cal_month td {
       width: 93px;
@@ -1361,6 +1362,7 @@ table#calendar span.middot {
     .karl-calendar-printing #cheader,
     .karl-calendar-printing #cwrapper,
     .karl-calendar-printing .ccontent,
+    .karl-calendar-printing .contentBox,
     .karl-calendar-printing #main,
     .karl-calendar-printing #center {
         background-color: white !important;
@@ -1379,6 +1381,16 @@ table#calendar span.middot {
         border-bottom: 0px solid #CECECE !important;
         height: 580px !important;
     }
+
+    .karl-calendar-printing table tr.days th {
+        border-right: 1px solid #cccccc;
+        border-top: 1px solid #cccccc;
+    } 
+
+    .karl-calendar-printing table tr.days th:first-child {
+        border-left: 1px solid #cccccc;    
+    }
+
 
     .karl-calendar-printing .karl-calendar-wide,
     .karl-calendar-printing .karl-calendar-narrow,
