added margin to offices

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -878,7 +878,7 @@ body > footer {
         }
         #offices-wrapper {
             width: 100%;
-            margin: 0;
+            margin: 0 0 0.5em;
             #offices-listing {
                 margin: 0;
                 padding:0;
