--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -4581,7 +4581,7 @@ body > footer {
 }
 #footer .container #offices-wrapper {
   width: 100%;
-  margin: 0;
+  margin: 0 0 0.5em;
 }
 #footer .container #offices-wrapper #offices-listing {
   margin: 0;
