--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -4520,7 +4520,7 @@ body > footer {
 }
 /* @end */
 #footer .container {
-  padding: 10px 0;
+  padding: 1.33em 4%;
 }
 #footer .container a {
   text-transform: uppercase;
@@ -4556,6 +4556,7 @@ body > footer {
   font-size: 1em;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 #footer .container .extra > li {
   display: inline;
@@ -4565,12 +4566,12 @@ body > footer {
 }
 #footer .container .extra li:after {
   content: ' | ';
-  display: block;
+  display: inline;
   margin: 0 0.5em;
 }
 #footer .container .extra li:last-child:after {
   content: '';
-  display: block;
+  display: inline;
   margin: 0;
 }
 #footer .container .extra a {
@@ -4592,13 +4593,12 @@ body > footer {
   text-transform: uppercase;
   margin: 0;
   padding: 0;
-  list-style: none;
   display: inline;
   white-space: normal;
 }
 #footer .container #offices-wrapper #offices-listing li:after {
   content: ' - ';
-  display: block;
+  display: inline;
   margin: 0 0.5em;
 }
 #footer .container #offices-wrapper #offices-listing li a {
@@ -4613,6 +4613,7 @@ body > footer {
 #footer .container #offices-wrapper #offices-listing li:last-child:after {
   content: '';
   margin: 0;
+  display: inline;
 }
 #footer .container #offices-wrapper p {
   padding: 0;
@@ -5928,9 +5929,6 @@ section > header.header h2 {
     width: 22.22222222222222%;
     margin-left: 1.3888888888888888%;
     margin-right: 1.3888888888888888%;
-  }
-  #footer .container .osi-logo {
-    padding: 1em 0;
   }
 }
 /* @end */
