--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -857,6 +857,7 @@ body > footer {
             padding: 0;
             list-style: none;
             li {
+                white-space: nowrap;
                 &:after {
                     content: ' | ';
                     display: inline;
@@ -889,7 +890,7 @@ body > footer {
                     margin: 0;
                     padding: 0;
                     display: inline;
-                    white-space: normal;
+                    white-space: nowrap;
                     &:after {
                         content: ' - ';
                         display: inline;
