fixed setup option in calendar header

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -196,6 +196,7 @@
         .border-radius (6px 6px 0 0);
 
         .d-layerpicker {
+            width: auto;
             margin: 0 8px;
             display: inline-block;
         }
