--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -329,6 +329,10 @@ section.main aside {
     padding: @space * 0.5em;
 }
 
+div.center_intranet {
+    width: 72%;
+}
+
 // CONTENT ACTIONS MENU
 @import "elements/actions.less";
 
