--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -288,7 +288,7 @@ form#chatter-post-form button.searchButton {
     border: 1px solid @grayLight;
     padding: 20px 0;
 }
-.noSectionMenu .singleColumn {
+.noSectionMenu .contentWrapper, .noSectionMenu .singleColumn {
     padding-top: 4.209em;
 }
 section.main {
