--- a/karl/views/static/ux2/main.css
+++ b/karl/views/static/ux2/main.css
@@ -1449,6 +1449,11 @@ a#global-logo {
   margin-left: 1.3888888888888888%;
   margin-right: 1.3888888888888888%;
 }
+#radar-panel .myprofile .profile-link {
+  text-decoration: underline;
+  font-weight: bold;
+  padding: 8px;
+}
 #radar-panel .approvalpanel1 {
   /*.col(4.5);*/
 
