Implement various, user-settable date format (US or EU) in the datetime form widgets including support on both the formish and the javascript (datepicker popup) level. Thus, fixing the lack of support in the start_date, end_date fields of add/edit calendar events. This fix covers both ux1 and ux2.

--- a/karl/views/forms/templates/formish/widgets/DateTime/widget.html
+++ b/karl/views/forms/templates/formish/widgets/DateTime/widget.html
@@ -4,6 +4,7 @@
       // create the widget
       $('#${field.cssname}')
           .karldatetimepicker({
+              dateFormat: "${getattr(field.widget, 'js_date_format', '')}",
               // make sure the date select popup comes over everything
               // most notably, buttons. A problem on IE7. */
               zIndex: 20000
