indented profile info on ux2

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -232,11 +232,15 @@ a#global-logo {
 
 .profileLabel {
     font-weight:bold;
+    display: block;
+    width: 10em;
+    float: left;
 }
 
 .profileBio {
     clear: both;
     display: block;
+    margin-left: 95px;
     margin-bottom: 2em;
 }
 
