people grid: only the name shall be a clickable/tappable link, the rest of the columns will just do the display.

--- a/karl/views/static/ux2/plugins/popper-gridbox/popper.gridbox.less
+++ b/karl/views/static/ux2/plugins/popper-gridbox/popper.gridbox.less
@@ -122,6 +122,7 @@ body > .loading-indicator label {
 
     /* Cell formatter styles */
 
+    .slick-cell.cellformatter-para,
     .slick-cell.cellformatter-paralink {
         white-space: normal;
         padding-bottom: 0;
