Fix alternating rows to match the rest of the site, in the Files and People grids (slickgrids) in ux2

--- a/karl/views/static/ux2/plugins/popper-gridbox/_slickgrid.less
+++ b/karl/views/static/ux2/plugins/popper-gridbox/_slickgrid.less
@@ -63,11 +63,14 @@
             border-left: 0;
             border-right: 0;
         }
-        .even div {
-            background: lighten(@bodyBg, 5%);
-        }
-        .odd div {
-            background: lighten(@bodyBg, 10%);
+        //.even div {
+        //    background: lighten(@bodyBg, 5%);
+        //}
+        //.odd div {
+        //    background: lighten(@bodyBg, 10%);
+        //}
+        .odd {
+            background: darken(@bodyBg, 2.5%);
         }
         .karl-wikitoc-grid-row-hover .slick-cell {
             background: lighten(@bodyBg, 40%);
