first cut at removing css media queries

--- a/karl/views/static/ux2/css/elements/anonymous.less
+++ b/karl/views/static/ux2/css/elements/anonymous.less
@@ -70,47 +70,47 @@
         }
     }
 }
-@media only screen and (min-width: 640px) {
-    .anonymous-body {
-        text-align: left;
-        form input {
-            width: 270px;
-        }
-        form input[type="checkbox"] {
-            width: auto;
-        }
-    }    
-}
-@media only screen and (min-width: 768px) {
-    .anonymous-body form input {
-        width: 350px;
-    }
-}
-@media only screen and (min-width: 1024px) {
-    .anonymous-body {
-        .warning {
-            width: 750px;
-            margin: 0 auto;
-        }
-    }
-}
-@media only screen and (max-width: 760px) {
-    .anonymous-body {
-        .anonymous-content {
-            &.warning {
-                padding-left: 6em;
-                background-size: 40px;
-            }
-        }
-    }
-}
-@media only screen and (max-width: 480px) {
-    .anonymous-body {
-        .anonymous-content {
-            &.warning {
-                padding-left: 6em;
-                background-size: 30px;
-            }
-        }
-    }
-}
+// @media only screen and (min-width: 640px) {
+//     .anonymous-body {
+//         text-align: left;
+//         form input {
+//             width: 270px;
+//         }
+//         form input[type="checkbox"] {
+//             width: auto;
+//         }
+//     }    
+// }
+// @media only screen and (min-width: 768px) {
+//     .anonymous-body form input {
+//         width: 350px;
+//     }
+// }
+// @media only screen and (min-width: 1024px) {
+//     .anonymous-body {
+//         .warning {
+//             width: 750px;
+//             margin: 0 auto;
+//         }
+//     }
+// }
+// @media only screen and (max-width: 760px) {
+//     .anonymous-body {
+//         .anonymous-content {
+//             &.warning {
+//                 padding-left: 6em;
+//                 background-size: 40px;
+//             }
+//         }
+//     }
+// }
+// @media only screen and (max-width: 480px) {
+//     .anonymous-body {
+//         .anonymous-content {
+//             &.warning {
+//                 padding-left: 6em;
+//                 background-size: 30px;
+//             }
+//         }
+//     }
+// }
