--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -1152,29 +1152,29 @@ section > header {
 @import "elements/anonymous.less";
 /* @end */
 
-/* @group 320 */
+/* @group 320
 @import "responsive/320.less";
-/* @end */
+@end */
 
-/* @group 480 */
+/* @group 480
 @import "responsive/480.less";
-/* @end */
+@end */
 
-/* @group 640 */
+/* @group 640
 @import "responsive/640.less";
-/* @end */
+@end */
 
-/* @group 768 */
+/* @group 768
 @import "responsive/768.less";
-/* @end */
+@end */
 
-/* @group 1024 */
+/* @group 1024
 @import "responsive/1024.less";
-/* @end */
+@end */
 
-/* @group 1265 */
+/* @group 1265
 @import "responsive/1265.less";
-/* @end */
+@end */
 
 @import "html5boilerplate/helpers.less";
 @import "html5boilerplate/print.css";
