--- a/karl/views/static/ux2/css/elements/dropdowns.less
+++ b/karl/views/static/ux2/css/elements/dropdowns.less
@@ -1,4 +1,4 @@
-/*li[data-quickpanel='quickpanel'],
+li[data-quickpanel='quickpanel'],
 div[data-quickpanel='quickpanel'] {
     position: relative;
 }
@@ -28,97 +28,97 @@ div[data-quickpanel='quickpanel'] {
     cursor: pointer;
 }
 
-@media only screen and (min-width: 640px) {
-    .dropdown-toggle {
-        position: relative;
-        .quickpanelToggle(#fff);
-    }
-    .ie8 .dropdown-toggle:after {
-        font-size: 0;
-    }
-    .dropdown {
-    	position: absolute;
-        left: 0;
-        top: 3.2em;
-        z-index: 10;
-        width: 100%;
-        .css3_box_sizing(border-box);
-        margin: 0;
-        padding: (@space * 1em);
-        .css3_linear_gradient(#000, #333);
-        border-width: 0 1px 1px;
-        color: #fff;
-        font-family: @smallestbaseFont;
-        font-size: .75em; /* for IE, older Opera, Opera mobile, etc *!/
-        font-size: .75rem; /* for contemporary browsers *!/
-        .css3_box_shadow(1px 1px 10px rgba(50,50,50,.8));
-        .css3_border_radius(0 0 0.3em 0.3em);
-        ul {
-    	    background: transparent;
-    	}	
-    	li {
-    	    display: list-item;
-    	    float: none;
-    	}
-        a {
-            display: inline;
-            color: lighten(@baseColor4, 10%);
-    	    padding: 0;
-    	    line-height: normal;
-    	    font-size: 1em;
-    	    background: transparent;
-    	    text-decoration: underline;
-    	    &:hover {
-    	        text-decoration: none;
-    	        color: lighten(@baseColor2, 10%);
-    	    }
-    	}
-    	figure {
-    	    float: left;
-    	    margin: 0 (@space * 1em) (@space * 1em) 0;
-    	}
-    }
-    .dropdown-footer {
-        border-top: 1px solid #222;
-        padding: 0;
-        margin-top: (@space * 1em)/2;
-        padding-top: (@space * 1em)/2;
-        position: relative;
-        &:before {
-    	    content: "";
-    	    display: block;
-    	    position: absolute;
-    	    top: 0;
-    	    left: 0;
-    	    font-size: 0;    	    
-    	    height: 1px;
-    	    width: 100%;
-    	    background: #444;
-    	}
-    }
-    .open .quickpanel,
-    .touch .open .dropdown,
-    .no-touch li[data-quickpanel='dropdown']:hover > .dropdown {
-        display: block !important;
-    }  
+// @media only screen and (min-width: 640px) {
+//     .dropdown-toggle {
+//         position: relative;
+//         .quickpanelToggle(#fff);
+//     }
+//     .ie8 .dropdown-toggle:after {
+//         font-size: 0;
+//     }
+//     .dropdown {
+//     	position: absolute;
+//         left: 0;
+//         top: 3.2em;
+//         z-index: 10;
+//         width: 100%;
+//         .css3_box_sizing(border-box);
+//         margin: 0;
+//         padding: (@space * 1em);
+//         .css3_linear_gradient(#000, #333);
+//         border-width: 0 1px 1px;
+//         color: #fff;
+//         font-family: @smallestbaseFont;
+        // font-size: .75em; /* for IE, older Opera, Opera mobile, etc */
+        // font-size: .75rem; /* for contemporary browsers */
+//         .css3_box_shadow(1px 1px 10px rgba(50,50,50,.8));
+//         .css3_border_radius(0 0 0.3em 0.3em);
+//         ul {
+//     	    background: transparent;
+//     	}	
+//     	li {
+//     	    display: list-item;
+//     	    float: none;
+//     	}
+//         a {
+//             display: inline;
+//             color: lighten(@baseColor4, 10%);
+//     	    padding: 0;
+//     	    line-height: normal;
+//     	    font-size: 1em;
+//     	    background: transparent;
+//     	    text-decoration: underline;
+//     	    &:hover {
+//     	        text-decoration: none;
+//     	        color: lighten(@baseColor2, 10%);
+//     	    }
+//     	}
+//     	figure {
+//     	    float: left;
+//     	    margin: 0 (@space * 1em) (@space * 1em) 0;
+//     	}
+//     }
+//     .dropdown-footer {
+//         border-top: 1px solid #222;
+//         padding: 0;
+//         margin-top: (@space * 1em)/2;
+//         padding-top: (@space * 1em)/2;
+//         position: relative;
+//         &:before {
+//     	    content: "";
+//     	    display: block;
+//     	    position: absolute;
+//     	    top: 0;
+//     	    left: 0;
+//     	    font-size: 0;    	    
+//     	    height: 1px;
+//     	    width: 100%;
+//     	    background: #444;
+//     	}
+//     }
+//     .open .quickpanel,
+//     .touch .open .dropdown,
+//     .no-touch li[data-quickpanel='dropdown']:hover > .dropdown {
+//         display: block !important;
+//     }  
      
-}
+// }
 
-@media only screen and (min-width: 768px) {
-    .dropdown {
-        width: 300px;
-    } 
-    .rtl .dropdown {
-        left: auto;
-        right: 0;
-    }
-}
+// @media only screen and (min-width: 768px) {
+//     .dropdown {
+//         width: 300px;
+//     } 
+//     .rtl .dropdown {
+//         left: auto;
+//         right: 0;
+//     }
+// }
 
-@media only screen and (min-width: 1024px) {
-    .dropdown {
-        width: 400px;
-    }
-}*/
+// @media only screen and (min-width: 1024px) {
+//     .dropdown {
+//         width: 400px;
+//     }
+// }
 
 // DROPDOWN MENUS
 // --------------
@@ -286,115 +286,113 @@ div[data-quickpanel='quickpanel'] {
     }
 }
 
-@media only screen and (min-width: 640px) {
-    #top-bar .open,
-    .sectionContainer .open,
-    .moreToggle + .dropdown-menu {
-        background: #000;
-    }
-    .sectionContainer .btn-group.open {
-        background: @baseColor3;
-    }
-    #top-bar .btn-group .dropdown-toggle,
-    .sectionContainer .btn-group .dropdown-toggle {
-        .css3_box_shadow(none);
-        .css3_border_radius(0 .5em 0 0);
-        margin-left: -0.6665em;
-    }
-    #top-bar .caret,
-    .sectionContainer .caret {
-        vertical-align: middle;        
-    }
-    .sectionContainer .btn-group.open {
-        > a {
-            color: @white;
-            &.dropdown-toggle {
-                background: @baseColor4;
-            }
-            .caret {
-                .opacity(100);
-            }
-        }
-        .dropdown-menu {
-            background: @baseColor4;
-        }
-    }
+// @media only screen and (min-width: 640px) {
+//     #top-bar .open,
+//     .sectionContainer .open,
+//     .moreToggle + .dropdown-menu {
+//         background: #000;
+//     }
+//     .sectionContainer .btn-group.open {
+//         background: @baseColor3;
+//     }
+//     #top-bar .btn-group .dropdown-toggle,
+//     .sectionContainer .btn-group .dropdown-toggle {
+//         .css3_box_shadow(none);
+//         .css3_border_radius(0 .5em 0 0);
+//         margin-left: -0.6665em;
+//     }
+//     #top-bar .caret,
+//     .sectionContainer .caret {
+//         vertical-align: middle;        
+//     }
+//     .sectionContainer .btn-group.open {
+//         > a {
+//             color: @white;
+//             &.dropdown-toggle {
+//                 background: @baseColor4;
+//             }
+//             .caret {
+//                 .opacity(100);
+//             }
+//         }
+//         .dropdown-menu {
+//             background: @baseColor4;
+//         }
+//     }
     
-    .moreToggle + .dropdown-menu {
-        left: 0;
-        top: 3.2em;
-        z-index: 10;
-        width: 100%;
-        min-width: 100%;
-        .css3_box_sizing(border-box);
-        margin: 0;
-        padding: (@space * 1em);
-        .css3_linear_gradient(#000, #333);
-        color: #fff;
-        font-family: @smallestbaseFont;
-        font-size: .75em;
-        font-size: .75rem;
-        .css3_box_shadow(1px 1px 10px rgba(50,50,50,.8));
-        ul {
-    	    background: transparent;
-    	}	
-    	li {
-    	    display: list-item;
-    	    float: none;
-    	    border: none;
-    	}
-        a {
-    	    padding: 0;
-    	    line-height: normal;
-    	    font-size: 1em;
-    	    background: transparent;
-    	    text-decoration: underline;
-    	    &:hover {
-    	        text-decoration: none;
-    	        color: lighten(@baseColor2, 10%);
-    	    }
-    	}
-    	figure {
-    	    float: left;
-    	    margin: 0 (@space * 1em) (@space * 1em) 0;
-    	}
-    }
-    .dropdown-footer {
-        border-top: 1px solid #222;
-        padding: 0;
-        margin-top: (@space * 1em)/2;
-        padding-top: (@space * 1em)/2;
-        position: relative;
-        &:before {
-    	    content: "";
-    	    display: block;
-    	    position: absolute;
-    	    top: 0;
-    	    left: 0;
-    	    font-size: 0;    	    
-    	    height: 1px;
-    	    width: 100%;
-    	    background: #444;
-    	}
-    }
-}
-@media only screen and (min-width: 768px) {
-    .moreToggle + .dropdown-menu {
-        width: 300px;
-        min-width: 300px;
-    } 
-    #top-bar .rtl .dropdown-menu,
-    .sectionContainer .rtl .dropdown-menu {
-        left: auto;
-        right: 0;
-    }
-}
+//     .moreToggle + .dropdown-menu {
+//         left: 0;
+//         top: 3.2em;
+//         z-index: 10;
+//         width: 100%;
+//         min-width: 100%;
+//         .css3_box_sizing(border-box);
+//         margin: 0;
+//         padding: (@space * 1em);
+//         .css3_linear_gradient(#000, #333);
+//         color: #fff;
+//         font-family: @smallestbaseFont;
+//         font-size: .75em;
+//         font-size: .75rem;
+//         .css3_box_shadow(1px 1px 10px rgba(50,50,50,.8));
+//         ul {
+//     	    background: transparent;
+//     	}	
+//     	li {
+//     	    display: list-item;
+//     	    float: none;
+//     	    border: none;
+//     	}
+//         a {
+//     	    padding: 0;
+//     	    line-height: normal;
+//     	    font-size: 1em;
+//     	    background: transparent;
+//     	    text-decoration: underline;
+//     	    &:hover {
+//     	        text-decoration: none;
+//     	        color: lighten(@baseColor2, 10%);
+//     	    }
+//     	}
+//     	figure {
+//     	    float: left;
+//     	    margin: 0 (@space * 1em) (@space * 1em) 0;
+//     	}
+//     }
+//     .dropdown-footer {
+//         border-top: 1px solid #222;
+//         padding: 0;
+//         margin-top: (@space * 1em)/2;
+//         padding-top: (@space * 1em)/2;
+//         position: relative;
+//         &:before {
+//     	    content: "";
+//     	    display: block;
+//     	    position: absolute;
+//     	    top: 0;
+//     	    left: 0;
+//     	    font-size: 0;    	    
+//     	    height: 1px;
+//     	    width: 100%;
+//     	    background: #444;
+//     	}
+//     }
+// }
+// @media only screen and (min-width: 768px) {
+//     .moreToggle + .dropdown-menu {
+//         width: 300px;
+//         min-width: 300px;
+//     } 
+//     #top-bar .rtl .dropdown-menu,
+//     .sectionContainer .rtl .dropdown-menu {
+//         left: auto;
+//         right: 0;
+//     }
+// }
 
-@media only screen and (min-width: 1024px) {
-    .moreToggle + .dropdown-menu {
-        width: 400px;
-        min-width: 400px;
-    }
-}
-
-/* @end */
+// @media only screen and (min-width: 1024px) {
+//     .moreToggle + .dropdown-menu {
+//         width: 400px;
+//         min-width: 400px;
+//     }
+// }
