--- a/karl/views/static/ux2/css/elements/portlets.less
+++ b/karl/views/static/ux2/css/elements/portlets.less
@@ -95,33 +95,33 @@
     }
 }
 
-@media only screen and (min-width: 640px) {
-    .portlet {
-        float:left;
-        width: 44%;
-        margin-right: 4%;
-        margin-left: 0;
-        padding: 2%;
-    }
-    .portlet:nth-of-type(even) {
-        margin-right: 0;
-    }
-    //.sectionRelated {
-        //.css3_border_radius(.5em);
-    //}
-}
+// @media only screen and (min-width: 640px) {
+//     .portlet {
+//         float:left;
+//         width: 44%;
+//         margin-right: 4%;
+//         margin-left: 0;
+//         padding: 2%;
+//     }
+//     .portlet:nth-of-type(even) {
+//         margin-right: 0;
+//     }
+//     //.sectionRelated {
+//         //.css3_border_radius(.5em);
+//     //}
+// }
 
-@media only screen and (min-width: 1024px) {
-    .portlet {
-        float: none;
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
-        padding: (@space * 1em)/2 0;
-    }
-    //.contentRelated:before {
-    //    .trianglePointer(left, darken(@baseColor2, 10%), .5em);
-    //    top: 0.5em;
-    //    left: -0.46em;
-    //}
-}
+// @media only screen and (min-width: 1024px) {
+//     .portlet {
+//         float: none;
+//         width: 100%;
+//         margin-left: 0;
+//         margin-right: 0;
+//         padding: (@space * 1em)/2 0;
+//     }
+//     //.contentRelated:before {
+//     //    .trianglePointer(left, darken(@baseColor2, 10%), .5em);
+//     //    top: 0.5em;
+//     //    left: -0.46em;
+//     //}
+// }
