Ux2 contentfeeds: fix the green button's width on  IE8. (It was just looking empty.)

--- a/karl/views/static/ux2/css/elements/contentfeeds.less
+++ b/karl/views/static/ux2/css/elements/contentfeeds.less
@@ -172,6 +172,7 @@
     //border: 1px solid #355217;
     font-weight: bold;
     color: #fff;
+    width: 14px; // XXX Needed on IE8, irrelevant on all other browsers
   }
   &.off,
   &.error {
