--- a/karl/views/static/ux2/css/elements/tagbox.less
+++ b/karl/views/static/ux2/css/elements/tagbox.less
@@ -17,100 +17,49 @@
         }
     }
 }
-a.tag, a.item,
-a.tagCounter {
-    .smaller();
-    float: left;
-    margin-right: 0;
+a.tag, span.tag,
+a.item, a.tagCounter {
+    font-size:.9em;
+    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin-right:0
 }
-a.tag, a.item {
-    position: relative;
-    z-index: 2;
-    background: @grayLighter;
-    //text-shadow: 0 1px 0 rgba(255,255,255,.6);
-    border-width: 1px;
-    border-style: solid;
-    border-color: darken(@grayLighter, 15%) darken(@grayLighter, 15%) darken(@grayLighter, 30%) darken(@grayLighter, 15%);
-    padding: .05em .5em;
-    color: @black;
+
+a.tag, span.tag, a.item {
+    position:relative;
+    background:#eee;
+    padding:.05em .5em;
+    color:#000
 }
+
 a.item {
     .css3_border_radius(.3em .3em .3em .3em);
 }
-a.tag {
-    .css3_border_radius(.3em 0 0 .3em);
-    :after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 50%;
-        margin-top: -0.2em;
-        right: -0.2em;
-        background: @grayLighter;
-        border-width: 1px;
-        border-style: solid;
-        border-color: darken(@grayLighter, 15%) @grayLighter darken(@grayLighter, 20%) darken(@grayLighter, 15%);
-        height: .4em;
-        width: .4em;
-        .css3_border_radius(50%);
-    }
+
+a.tag, span.tag {
+    float:left;
+    .css3_border_radius(.3em .3em .3em .3em);
 }
+
 a.removeTag {
-    .visuallyhidden();
-    font-family: @fancyFont;
-    z-index: 4;
-    content: "x";
-    display: block;
-    position: absolute;
-    line-height: 1em;
-    background: @black;
-    color:  @white;
-    top: -0.6em;
-    left: -0.6em;
-    text-align: center;
+    padding: 0 0 0 1em;
+    font-family:"CabinRegular",Arial,sans-serif;
+    line-height:1em;
+    color:#000;
+    position:absolute;
+    top:1px;
+    right:3px;
+    text-align:center;
     .css3_border_radius(50%);
-    font-size: .85em;
 }
+
 a.personal {
     background: darken(@grayLighter, 15%);
 }
-.no-touch a.personal:hover + a.removeTag,
-.no-touch a.removeTag:hover {
-    border: 1px solid @white;
-    clip: auto;
-    height: 1.3em;
-    margin: 0;
-    width: 1.3em;
+
+a.tagCounter{
+    padding:.05em 1em .05em 0.6em
 }
-a.tagCounter {
-    .personIcon();
-    .css3_border_radius(0 .3em .3em 0);
-    .css3_transition(margin-left .2s ease-out);
-    padding: .05em .6em .05em 1.6em;
-    background-color: @black;
-    border: 1px solid @black;
-    border-width: 1px;
-    border-style: solid;
-    border-color: darken(@baseColor1, 10%) darken(@baseColor1, 10%) darken(@baseColor1, 15%) @baseColor1;
-    color: @white;
-    //text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-}
-.no-touch a.tagCounter {
-    margin-left: -2.1em;
-    position: absolute;
-    z-index: 1;
-}
-.no-touch a.tag:hover,
-.no-touch a.item:hover
-{
-    z-index: 4;
-}
-.no-touch a.tag:hover ~ a.tagCounter,
-.no-touch a.item:hover ~ a.tagCounter,
-.no-touch a.tagCounter:hover {
-    margin-left: 0em;
-    z-index: 3;
-}
+
 form.addTag {
     width: auto;
     //clear: left;
