added custom widths for my profile pushdown panels

--- a/karl/views/static/ux2/css/elements/pushdowns.less
+++ b/karl/views/static/ux2/css/elements/pushdowns.less
@@ -177,3 +177,12 @@
     display: none;
     .smaller();
 }
+.mycommunities {
+    width: 30%;
+}
+.myrecentitems{
+    width: 30%;
+}
+.myprofile {
+    width: 30%;
+}
