second cut at responsiveless layout

--- a/karl/views/static/ux2/css/elements/pushdowns.less
+++ b/karl/views/static/ux2/css/elements/pushdowns.less
@@ -33,6 +33,8 @@
     cursor: pointer;
 }
 .pushdownContent {
+    width: 1200px;
+    margin: auto;
     a {
         color: @baseFontColor;
     }
